--- a/company-profile/about.html
+++ b/company-profile/about.html
@@ -29,49 +29,32 @@
         <div class="container">
             <h1><a href="index.html">EFDREAMS</a></h1>
             <ul>
-                <li class="active"><a href="index.html">HOME</a></li>
-                <li><a href="about.html">ABOUT</a></li>
+                <li ><a href="index.html">HOME</a></li>
+                <li class="active"><a href="about.html">ABOUT</a></li>
                 <li><a href="service.html">SERVICE</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </div>
     </header>
 
-    <!-- banner   -->
-    <section class="banner">
-       <h2>WELCOME TO MY WEBSITE</h2> 
+    <!-- label  -->
+    <section class="label">
+        <div class="container">
+            <p>Home / About</p>
+        </div>
     </section>
 
     <!-- about  -->
     <section class="about">
         <div class="container">
+            <img src="img/autumn1.jpg" width="100%">
             <h3>ABOUT</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <strong>Esse corrupti ad rerum minima quas reiciendis magni porro quidem et at dignissimos, hic fuga cum a nihil, cupiditate molestiae optio adipisci.</strong>  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, delectus at necessitatibus a quis natus asperiores quaerat ipsa quia mollitia, error repellendus, fugiat consequuntur molestias animi tempore ab dolore id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni consequatur optio rerum eaque exercitationem accusamus quae reprehenderit possimus ex minima impedit neque illo sit, aliquam deserunt sequi laudantium, eos consectetur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum consequatur harum modi illum, cum culpa pariatur veritatis temporibus labore magnam, odit nesciunt molestiae ratione sapiente provident sequi, earum necessitatibus dolorum!</p>
-        </div>
-    </section>
-
-    <!-- service -->
-    <section class="service">
-        <div class="container">
-            <h3>SERVICE</h3>
-            <div class="box">
-                <div class="col-4">
-                    <div class="icon"><i class="fa-solid fa-mobile"></i></div>
-                    <h4>MOBILE APP</h$>
-                </div>
-                <div class="col-4">
-                    <div class="icon"><i class="fa-solid fa-globe"></i></div>
-                    <h4>WEB DEVELOPMENT</h$>
-                </div>
-                <div class="col-4">
-                    <div class="icon"><i class="fa-solid fa-edit"></i></div>
-                    <h4>DESIGN</h$>
-                </div>
-                <div class="col-4">
-                    <div class="icon"><i class="fa-solid fa-chart-bar"></i></div>
-                    <h4>DIGITAL MARKETING</h$>
-                </div>
-            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <strong>Esse corrupti ad rerum minima quas reiciendis magni porro quidem et at dignissimos, hic fuga cum a nihil, cupiditate molestiae optio adipisci.</strong>  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, delectus at necessitatibus a quis natus asperiores quaerat ipsa quia mollitia, error repellendus, fugiat consequuntur molestias animi tempore ab dolore id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni consequatur optio rerum eaque exercitationem accusamus quae reprehenderit possimus ex minima impedit neque illo sit, aliquam deserunt sequi laudantium, eos consectetur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum consequatur harum modi illum, cum culpa pariatur veritatis temporibus labore magnam, odit nesciunt molestiae ratione sapiente provident sequi, earum necessitatibus dolorum!</p>
+            <h3>VISI</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora placeat rerum alias ullam doloremque itaque eius dignissimos incidunt, debitis nulla et culpa repudiandae illum voluptate provident cumque impedit quasi sequi! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure cupiditate assumenda repellendus nesciunt aperiam hic, ipsa maiores molestiae? Veniam ipsum laborum nulla <strong>illo omnis a tenetur sunt laboriosam ratione.</strong></p>
+            <h3>MISI</h3>
+            <p>Tempora placeat rerum alias ullam doloremque itaque eius dignissimos incidunt, debitis nulla et culpa repudiandae illum voluptate provident cumque impedit quasi sequi! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure cupiditate assumenda repellendus nesciunt aperiam hic, ipsa maiores molestiae? Veniam ipsum laborum nulla <strong>illo omnis a tenetur sunt laboriosam ratione.</strong></p>
         </div>
     </section>
 
