--- a/company-profile/contact.html
+++ b/company-profile/contact.html
@@ -29,49 +29,44 @@
         <div class="container">
             <h1><a href="index.html">EFDREAMS</a></h1>
             <ul>
-                <li class="active"><a href="index.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="service.html">SERVICE</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
+                <li class="active"><a href="contact.html">CONTACT</a></li>
             </ul>
         </div>
     </header>
 
-    <!-- banner   -->
-    <section class="banner">
-       <h2>WELCOME TO MY WEBSITE</h2> 
-    </section>
-
-    <!-- about  -->
-    <section class="about">
+    <!-- label  -->
+    <section class="label">
         <div class="container">
-            <h3>ABOUT</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <strong>Esse corrupti ad rerum minima quas reiciendis magni porro quidem et at dignissimos, hic fuga cum a nihil, cupiditate molestiae optio adipisci.</strong>  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, delectus at necessitatibus a quis natus asperiores quaerat ipsa quia mollitia, error repellendus, fugiat consequuntur molestias animi tempore ab dolore id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni consequatur optio rerum eaque exercitationem accusamus quae reprehenderit possimus ex minima impedit neque illo sit, aliquam deserunt sequi laudantium, eos consectetur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum consequatur harum modi illum, cum culpa pariatur veritatis temporibus labore magnam, odit nesciunt molestiae ratione sapiente provident sequi, earum necessitatibus dolorum!</p>
+            <p>Home / CONTACT INFO</p>
         </div>
     </section>
-
+    
     <!-- service -->
     <section class="service">
         <div class="container">
-            <h3>SERVICE</h3>
+            <h3>CONTACT</h3>
             <div class="box">
                 <div class="col-4">
-                    <div class="icon"><i class="fa-solid fa-mobile"></i></div>
-                    <h4>MOBILE APP</h$>
+                    <h4>Address</h4>
+                    <p>Perumahan Pangauban Silih Asih Blok E 57 A</p>
                 </div>
                 <div class="col-4">
-                    <div class="icon"><i class="fa-solid fa-globe"></i></div>
-                    <h4>WEB DEVELOPMENT</h$>
+                    <h4>Email</h4>
+                    <p>edwinfirmansyah97@gmail.com</p>
                 </div>
                 <div class="col-4">
-                    <div class="icon"><i class="fa-solid fa-edit"></i></div>
-                    <h4>DESIGN</h$>
+                    <h4>Telp.</h4>
+                    <p>(021) 12355780</p>
                 </div>
                 <div class="col-4">
-                    <div class="icon"><i class="fa-solid fa-chart-bar"></i></div>
-                    <h4>DIGITAL MARKETING</h$>
+                    <h4>Hp</h4>
+                    <p>08925719579175</p>
                 </div>
             </div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.900627997657!2d107.45601201431691!3d-6.902486169467408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68fbd671a89663%3A0x7cf91263db0d8c2e!2sPerumahan%20pangauban%20silih%20asih%20Q56!5e0!3m2!1sen!2sid!4v1657871911461!5m2!1sen!2sid" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
 
